--- a/templates/pay.html
+++ b/templates/pay.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>DonKats Pay Now</title>
-  <script src="https://sandbox.paypal.com/sdk/js?client-id=BAArRR1mKa6xQaV43Xt-gr0Xy9WQ_6KvjBj8gAGI7VQ6QlPwESVK1luyBSEFptRCZMTmeLbhzlOWH-mV0M&currency=USD&disable-funding=paylater"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=BAArRR1mKa6xQaV43Xt-gr0Xy9WQ_6KvjBj8gAGI7VQ6QlPwESVK1luyBSEFptRCZMTmeLbhzlOWH-mV0M&currency=USD&disable-funding=paylater"></script>
 </head>
 <body>
   <h2>DonKats Meal Planner</h2>
